// SPDX-FileCopyrightText: 2022-2023 Shun Sakai and Contributors
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/sysexits-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.6.2\...v0.6.3[0.6.3] - 2023-08-09

=== Added

* Add more doctests to `From` ({pull-request-url}/36[#36])

== {compare-url}/v0.6.1\...v0.6.2[0.6.2] - 2023-08-01

=== Changed

* Call Docker images directly ({pull-request-url}/32[#32])
* Change the comment header to the format recommended by the REUSE
  Specification ({pull-request-url}/33[#33])
* Make this project REUSE compliant ({pull-request-url}/34[#34])

== {compare-url}/v0.6.0\...v0.6.1[0.6.1] - 2023-06-22

=== Added

* Add Linting Workflow for GHA Workflows ({pull-request-url}/31[#31])

== {compare-url}/v0.5.0\...v0.6.0[0.6.0] - 2023-05-15

=== Added

* Add methods to get error details
* Add `impl From<std::io::Error> for ExitCode` ({pull-request-url}/28[#28])

=== Changed

* Replace `impl TryFrom<std::io::ErrorKind> for ExitCode` with
  `impl From<std::io::ErrorKind> for ExitCode`

=== Removed

* Remove `TryFromErrorKindError`

== {compare-url}/v0.4.1\...v0.5.0[0.5.0] - 2023-04-01

=== Added

* Add release checklist ({pull-request-url}/16[#16])
* Implement `PartialEq` and `Eq` for `ExitCode` ({pull-request-url}/19[#19])
* Add `ExitCode` based `Result` type and unit test ({pull-request-url}/21[#21])
* Implement `Error` for `ExitCode` ({pull-request-url}/23[#23])

=== Changed

* Rename `FromErrorKindError` to `TryFromErrorKindError`
* Rename `FromExitStatusError` to `TryFromExitStatusError`

== {compare-url}/v0.4.0\...v0.4.1[0.4.1] - 2023-01-28

=== Fixed
