@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2022-2023 Shun Sakai and Contributors
+# SPDX-FileCopyrightText: 2022 Shun Sakai and other contributors
 #
 # SPDX-License-Identifier: Apache-2.0 OR MIT
 
