@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2022-2023 Shun Sakai and Contributors
+Copyright (c) 2022-2023 Shun Sakai and other contributors
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
